--- a/public/assets/pages/home.html
+++ b/public/assets/pages/home.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="/assets/styles/iconset.css">
 		<link rel="stylesheet" href="/assets/styles/mobile.css">
 
-		<title>vCenter - Dashboard</title>
+		<title>vCenter - Home</title>
 	</head>
 	<body class="">
 		<div class="top-nav">
@@ -27,11 +27,7 @@
 
 			<a class="nav-item active" href="/">
 				<i class="ph-house"></i>
-				<div class="nav-link">Dashboard</div>
-			</a>
-			<a class="nav-item" href="/overview/monitoring/">
-				<i class="ph-activity"></i>
-				<div class="nav-link">Monitoring</div>
+				<div class="nav-link">Home</div>
 			</a>
 
 			<div class="nav-divider"><span>Inventory</span> <div></div></div>
@@ -47,10 +43,6 @@
 			<a class="nav-item" href="/inventory/virtual-machines/">
 				<i class="ph-desktop"></i>
 				<div class="nav-link">Virtual Machines</div>
-			</a>
-			<a class="nav-item" href="/inventory/vm-templates/">
-				<i class="ph-note-blank"></i>
-				<div class="nav-link">VM Templates</div>
 			</a>
 			<a class="nav-item" href="/inventory/storage/">
 				<i class="ph-hard-drives"></i>
@@ -85,10 +77,10 @@
 		</div>
 
 		<div class="page-container">
-			<h6 class="page-heading">Dashboard</h6>
+			<h6 class="page-heading">Home</h6>
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item">Overview</li>
-				<li class="breadcrumb-item active"><a href="/">Dashboard</a></li>
+				<li class="breadcrumb-item active"><a href="/">Home</a></li>
 			</ol>
 
 			<h4 class="page-subheading">Resource Overview</h4>
