--- a/public/assets/pages/virtual-machines.html
+++ b/public/assets/pages/virtual-machines.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="/assets/styles/iconset.css">
 		<link rel="stylesheet" href="/assets/styles/mobile.css">
 
-		<title>vCenter - Hosts</title>
+		<title>vCenter - Virtual Machines</title>
 	</head>
 	<body class="">
 		<div class="top-nav">
@@ -28,10 +28,6 @@
 			<a class="nav-item" href="/">
 				<i class="ph-house"></i>
 				<div class="nav-link">Dashboard</div>
-			</a>
-			<a class="nav-item" href="/overview/monitoring/">
-				<i class="ph-activity"></i>
-				<div class="nav-link">Monitoring</div>
 			</a>
 
 			<div class="nav-divider"><span>Inventory</span> <div></div></div>
