--- a/public/assets/pages/clusters.html
+++ b/public/assets/pages/clusters.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="/assets/styles/iconset.css">
 		<link rel="stylesheet" href="/assets/styles/mobile.css">
 
-		<title>vCenter - Hosts</title>
+		<title>vCenter - Clusters</title>
 	</head>
 	<body class="">
 		<div class="top-nav">
